# fabric-mcp

./: IGNORE_THIS_PR.txt  Makefile  README.md  cspell.json  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: contributing.md  design.md
docs/stories/: 1.2.story.md  1.4.story.md  1.7.story.md  2.2.story.md
fabric_mcp/: __about__.py  api_client.py  cli.py  core.py  mcp_protocol.py  server.py  server_stdio.py  utils.py
src/fabric_mcp/: __about__.py  cli.py  core.py
tests/: test_core.py  test_server_stdio.py
tests/integration/: test_http_streamable_transport.py  test_mcp_integration.py  test_transport_integration.py
tests/shared/: transport_test_utils.py
tests/shared/fabric_api/: server.py  utils.py
tests/unit/: test_api_client.py  test_cli_additional.py  test_core.py  test_fabric_get_pattern_details.py  test_fabric_list_patterns.py
