[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fabric-mcp"
dynamic = ["version"]
description = "MCP Server for Fabric AI Framework"
authors = [{ name = "Kayvan Sylvan", email = "kayvan@sylvan.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["requests>=2.28.0", "modelcontextprotocol>=0.1.0"]

[project.urls]
"Homepage" = "https://github.com/ksylvan/fabric-mcp"
"Repository" = "https://github.com/ksylvan/fabric-mcp"
"Bug Tracker" = "https://github.com/ksylvan/fabric-mcp/issues"
"Documentation" = "https://github.com/ksylvan/fabric-mcp#readme"


[project.scripts]
fabric-mcp = "fabric_mcp.cli:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# Tell hatchling where to find the version variable
[tool.hatch.version]
path = "fabric_mcp/__about__.py"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "hatch>=1.14.1",
    "hatchling>=1.27.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "uv>=0.7.2",
]

# Flake8 config will be in .flake8 file
